# gsoc-static-map

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  check-all.sh  check-optimized.sh  format.sh  print-func-asm.sh
.circleci/: config.yml
include/static_map/: constexpr_string_view.hpp  static_map.hpp
test/: static_map.cpp
